Fix ui on safari and mobile Updated roadmap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,14 +3,13 @@
  */
 @import "bootstrap.css";
 html {
-  height: 100%;
+  min-height: 100% !important;
+  margin: 0;
 }
 
 body {
-  min-height: 100%;
-}
-
-body {
+  margin: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
